# NIST-Blackjack

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  blackjack.c  blackjack.f90  fpm.toml  main.f90  meson.build
.github/workflows/: ci.yml
app/: main.f90  rand_order.f90
src/: blackjack.f90  shuffler.f90
tests/: test_hit.cmake  test_hit.py  y.asc
